# image-encryption-system

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
docs/: SECURITY_MODEL.md
scripts/: create_demo_image.py
src/image_encryption_system/: __init__.py  config.py  crypto.py  storage.py  web.py
src/image_encryption_system/static/css/: styles.css
src/image_encryption_system/templates/: auth.html  dashboard.html  layout.html
tests/: test_crypto.py  test_web.py
